Added a google images search, finished styling both the primary search and the google image search, and added the necessary logic to connect both to google's backend logic. Tested the demo successfully

--- a/styles.css
+++ b/styles.css
@@ -92,8 +92,8 @@ main
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-width: 280px;
-    width: 45%;
+    min-width: 350px;
+    width: 115%;
     height: 45px;
     border: 1px solid #e7e8eb;
     border-radius: 30px;
@@ -115,7 +115,7 @@ main
 
 .search input
 {
-    width: 90%;
+    flex: 1;
     height: 100%;
     background-color: transparent;
     border: none;
@@ -129,15 +129,14 @@ main
     cursor: pointer;
 }
 
+
 .logo {
-    width: 450px; /* Adjust the width as needed */
-    height: auto; /* Maintain aspect ratio */
+    width: auto; 
+    height: 250px; 
     margin-bottom: -100px;
+    margin-left: 15%;
 }
 
-.search input, .search img {
-    margin: 5px 0; /* Adjust margin as needed */
-}
 
 .search-button button
 {
@@ -148,7 +147,7 @@ main
     font-size: 14px;
     text-align: center;
     padding: 10px 16px;
-    margin: 0 4px;
+    margin-left: 15%;
     cursor: pointer;
 }
 
@@ -194,3 +193,52 @@ footer
     text-decoration: underline;
 
 }
+
+.navbar-images
+{
+    margin-left: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;  
+}
+
+.images-text
+{
+    margin-left: 48%;
+    padding-top: 2px;
+    font-size: 16px;
+    letter-spacing: -1.9px;
+    font-family: "Product Sans", sans-serif;
+}
+
+.images-text span:nth-child(1),.images-text span:nth-child(4) 
+{
+    color: 	#4285F4;
+}
+
+.images-text span:nth-child(2),
+.images-text span:nth-child(6) 
+{
+    color: 	#EA4335;
+}
+
+.images-text span:nth-child(3) 
+{
+    color: #FBBC05;
+}
+
+.images-text span:nth-child(5) 
+{
+    color: 	#34A853;
+}
+
+.magnifying-glass
+{
+    all: initial;
+    
+}
+
+
+
